// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component renders the UI as expected 1`] = `
<section
  className="List"
>
  <header
    className="List-header"
  >
    <h2>
      First list
    </h2>
  </header>
  <div
    className="List-cards"
  >
    <div
      className="Card"
    >
      <button
        type="button"
      >
        delete
      </button>
      <h3>
        First card
      </h3>
      <p>
        lorem ipsum
      </p>
    </div>
  </div>
</section>
`;

exports[`Card component renders the UI as expected with no props 1`] = `
<section
  className="List"
>
  <header
    className="List-header"
  >
    <h2>
      in list padre
    </h2>
  </header>
  <div
    className="List-cards"
  >
    <div
      className="Card"
    >
      <button
        type="button"
      >
        delete
      </button>
      <h3>
        Default title
      </h3>
      <p>
        Nothing to see there
      </p>
    </div>
  </div>
</section>
`;
